syntax = "proto3";

package com.road.yishi.proto.campaign;

message OprateReplacemntMsg {
  int32 op = 1;
  int32 campaignId = 2;
  int32 result = 3;
}
