syntax = "proto3";

package com.road.yishi.proto.campaign;

message WorldBossLiveMsg {
  int32 op = 1;
}
